# tt-simple-viii

./: .gitignore  CMakeLists.txt  Makefile  Makefile.macros  README.md  dumpfile.fst.hier  info.yaml
.github/workflows/: gds.yaml
lib/: assembler.cpp  assembler.h  control_word.h  control_word.hpp  globals.h  macro_instruction.cpp  macro_instruction.h  macro_instruction.hpp  micro_instruction_word.hpp  microcode.cpp  microcode.h  timing_state.hpp
scripts/: coverage  makegtest
src/: config.json  tt_um_strau0106_simple_viii.v
src/modules/: alu.sv  control_unit.sv  ctrl.sv  mem_ctrl.sv  memory.sv  mux.sv  qspi_ctrl.v  reg_acc.sv  reg_tmp.sv  registers.sv
src/units/: cpu.sv  mem.sv
test/: .gitignore  Makefile  alu_tb.sv  alu_test.cpp  alu_test.mk  alu_test.py  arch.drawio  control_unit_test.cpp  controlpack.py  cpu_tb.sv  cpu_test.cpp  cpu_test.mk  ctrl_tb.sv  fibonacci_program.py  mem_ctrl_tb.sv  mem_ctrl_test.py  mem_tb.sv  mem_test.gtkw  mem_test.mk  mem_test.py  memory_test.cpp  module_test.mk  programms.py  qspi_test.hex  reg_acc_test.cpp  reg_tmp_test.cpp  registers_tb.sv  registers_test.py  sim_qspi.v  top_fib_test.py  top_nth_sum_test.hex  top_nth_sum_test.py  top_ops_test.hex  top_ops_test.py  top_register_test.py  top_scan_chain_test.py  top_tb.sv  top_test.mk  utils.py
test/lib/: controlpack.py  instructions.py  scan_chain.py  utils.py
